frame/support/test/tests/construct_runtime_ui/conflicting_index.stderr
error: Module index are conflicting both modules Pallet1 and System are at index 0
  --> $DIR/conflicting_index.rs:10:3
   |
10 |         Pallet1: pallet1::{} = 0,
   |         ^^^^^^^
