frame/support/test/tests/construct_runtime_ui/conflicting_index.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		UncheckedExtrinsic = UncheckedExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: system::{},
		Pallet1: pallet1::{} = 0,
	}
}

fn main() {}
